@@ -7,12 +7,12 @@ module main(input clk);
     x++;
 
   // passes with bound >=9
-  p0: cover property (1[*10]);
+  p0: cover sequence (1[*10]);
 
   // passes with bound >=3
-  p1: cover property (1[*4:10]);
+  p1: cover sequence (1[*4:10]);
 
   // passes with bound >=4
-  p2: cover property (1[*5:10]);
+  p2: cover sequence (1[*5:10]);
 
 endmodule
